Added support for JSEP for expression parsing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta charset="UTF-8">
     <title>arbela</title>
     <link rel="stylesheet" href="resources/app.css">
+
+    <script type="text/javascript" src="lib/jsep-0.3.0/jsep.min.js"></script>
+
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
 </head>
