Added MQTT datasource support. Tested with HiveMQ

--- a/mqtt.html
+++ b/mqtt.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="lib/paho.javascript-1.0.1/mqttws31.js"></script>
 
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
-    <script id="microloader" type="text/javascript" src="app/protocols/MQTT.js"></script>
+    <script id="microloader" type="text/javascript" src="app/protocols/MQTTTest.js"></script>
 
 </head>
 <body></body>
